# protogenOS

./: .dockerignore  .drone.yml  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build-iso.yml  build-kernels.yml
config/: theme.conf
docker/: Dockerfile  Kernel.Dockerfile
docs/: ci.md  dotfiles.md  installer.md  scripts.md  theme.md  vision.md
installer/protogenos_installer/: __init__.py  backend.py  branding.py  cli.py  models.py  profiles.py  tui.py
kernels/: README.md
kernels/flavors/: developer.cfg  generic.cfg  minimal-vm.cfg  performance.cfg  zen.cfg
overlays/airootfs/etc/: hostname  issue  motd  os-release
overlays/airootfs/usr/local/share/protogenos/: zlogin
overlays/airootfs/usr/share/protogenos/: README
profiles/: README.md  base.packages  developer.packages  gamer.packages  general.packages  options.conf
protogenos/: packages.x86_64  profiledef.sh
protogenos/airootfs/etc/: hostname  motd
protogenos/efiboot/loader/entries/: 01-archiso-x86_64-linux.conf  02-archiso-x86_64-speech-linux.conf  03-archiso-x86_64-ram-linux.conf
protogenos/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
scripts/: build-iso  build-kernel  check-kernel-configs  container-build  container-build-kernel  create-vm-disk  dev-check  docker-build  prepare-profile  protogenos-install  qemu-lib  run-disk  run-iso  run-kernel
tests/: test_installer.py  test_profiles.py
