[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "protogenos-installer"
version = "0.1.0"
description = "Installation-plan wizard for protogenOS"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }

[project.scripts]
protogenos-install = "protogenos_installer.cli:main"

[tool.setuptools]
package-dir = { "" = "installer" }
packages = ["protogenos_installer"]
